# rps-arena

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GAMEPLAY.md  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml  container.yml
agent-client/: Cargo.toml
agent-client/src/: main.rs
backend/: Cargo.toml  build.rs
backend/migrations/00000000000000_initial/: down.sql  up.sql
backend/migrations/2026-06-25-003500_remove_test_mode/: down.sql  up.sql
backend/migrations/2026-06-25-004500_add_strategy_summaries/: down.sql  up.sql
backend/src/: client_ip.rs  db.rs  db_ops.rs  embedded_assets.rs  game.rs  main.rs  models.rs  rate_limit.rs  rules.rs  schema.rs
backend/src/handlers/: health.rs  mod.rs  play.rs  read_api.rs  websocket.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
scripts/: cargo-audit-policy.sh  check-migration-names.sh  play-curl.sh
shared/: Cargo.toml
shared/src/: lib.rs
