[package]
name = "agent-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shared = { path = "../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
ws-bridge = { version = "0.1", features = ["native-client"] }
