[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-cookies = "0.10"

# Database
diesel = { version = "2.3.8", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.3.1"

# Embedded frontend assets
rust-embed = "8"
mime_guess = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI + config
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket (typed via ws-bridge)
ws-bridge = { version = "0.1", features = ["server"] }

# Utilities
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Workspace
shared = { path = "../shared" }
