[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Crypto", "EventTarget", "HtmlInputElement", "HtmlSelectElement", "Window"] }
gloo-net = "0.6"
gloo-timers = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["serde"] }
ws-bridge = { version = "0.1", features = ["yew-client"] }
shared = { path = "../shared" }
